# NativeHook

app/: build.gradle
app/src/androidTest/java/com/example/nativehook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nativeHook.cpp
app/src/main/java/com/example/nativehook/: MainActivity.java  MyApp.java  ThreadHook.java
app/src/main/java/com/qiyi/test/: Test.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/nativehook/: ExampleUnitTest.java
biz/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
xhook/: build.gradle
xhook/src/main/cpp/: CMakeLists.txt  xhook.h
